<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">昊森热能</string>
    <string name="title_activity_login">昊森热能</string>
    <string name="action_settings">Settings</string>
    <string name="password">请输入密码</string>
    <string name="username">请输入用户名</string>
    <string name="title_activity_main">昊森热能</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_smartconfig">将wifi信息设置到设备</string>
    <string name="smartconfig_start">开始设置</string>
    <string name="smartconfig_cancel">停止设置</string>
    <string name="smartconfig_network_name_text">网络名称</string>
    <string name="smartconfig_network_name_field">Network</string>
    <string name="smartconfig_network_pass_text">密码</string>
    <string name="smartconfig_network_pass_field">Password</string>
    <string name="smartconfig_device_name_text">设备名称</string>
    <string name="smartconfig_device_name_field">Name of the Device</string>
    <string name="smartconfig_device_name_explanation">请输入wifi网络密码后，长按两用炉的开关，直到出现红绿闪烁提示灯，然后在app按“开始设置”，当提示灯变为绿色即设置成功。若设置不成功可重复此步骤。</string>
    <string name="smartconfig_key_text">Key</string>
    <string name="smartconfig_key_field">Device Password</string>
    
    <string name="register_phone_text">手机号码</string>
    <string name="register_authcode_text">验证码</string>
    <string name="register_password_text">密码</string>
     <string name="register_phone_hint">请输入手机号码</string>
    <string name="register_authcode_hint">请输入短信验证码</string>
    <string name="register_password_hint">请输入登录密码</string>   
    <string name="register_get_authcode">获取短信验证码</string>
    <string name="register_agreement_check">已阅读并同意</string>
    <string name="register_agreement_text"><u>服务条款及协议</u></string>


//pulltorefressListview
    <string name="refresh_pull_down">Pull down to refresh…</string>
    <string name="refresh_release">Release to refresh…</string>
    <string name="loading">Loading…</string>
    <string name="refresh_pull_up">Pull up to refresh…</string>


    //TEST
    <string name="app_version">v0.3.3</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">Task result count</string>
    <string name="btnConfirmTitle">Confirm</string>
    <string name="smartconfig_tips">请输入WIFI网络密码后，长按两用炉的配置开关，看到液晶屏上的WIFI图标闪动时再按“下一步”，当WIFI图标停止闪动并长亮时，表示WIFI已配置成功，可以点击“停止设置”并返回主界面。</string>
</resources>
