<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f3f0"
    android:orientation="vertical">

    <com.heneng.heater.views.HeaderView
        android:id="@id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_header_height"
        app:headerLeftText="登陆"
        app:headerTitle="用户注册"></com.heneng.heater.views.HeaderView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/register_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="18dp"
            android:text="@string/register_phone_text"
            android:textColor="#333333"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_phone_field"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/register_phone_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/register_phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_authcode_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/register_phone_text"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_authcode_text"
            android:textColor="#333333"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_authcode_field"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/register_authcode_text"
            android:layout_alignLeft="@+id/register_phone_field"
            android:layout_alignRight="@+id/register_phone_field"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/register_authcode_hint"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_authcode_getbutton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/register_phone_field"
            android:layout_alignRight="@+id/register_phone_field"
            android:layout_below="@id/register_authcode_text"
            android:background="@drawable/selector_register_btn"
            android:text="获取验证码"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_password_text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/register_authcode_text"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="60dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/eye_icon"
            android:gravity="center"
            android:text="@string/register_password_text"
            android:textColor="#333333"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_password_field"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignBaseline="@id/register_password_text"
            android:layout_alignLeft="@+id/register_phone_field"
            android:layout_alignRight="@+id/register_phone_field"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="32"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/register_agreement_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/register_password_text"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_agreement_check"
            android:textColor="#666666"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/register_agreement_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/register_agreement_check"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/register_agreement_check"
            android:text="@string/register_agreement_text"
            android:textColor="#FE840A"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register_phone_text"
            android:layout_alignRight="@+id/register_phone_field"
            android:layout_below="@id/register_agreement_check"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_btnbg"
            android:gravity="center"
            android:text="注       册"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </RelativeLayout>
</LinearLayout>