<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f3f0"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/topbg2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:src="@drawable/toplogo" />

        <ImageView
            android:id="@+id/smartconfig_Top_return"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/return1" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/tab_smartconfig_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_smartconfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/title_smartconfig"
            android:textColor="#333333"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/smartconfig_network_layout"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_below="@+id/title_smartconfig"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#FFF">

            <TextView
                android:id="@+id/smartconfig_network_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:text="@string/smartconfig_network_name_text"
                android:textColor="#333333"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/smartconfig_network_name_field"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/smartconfig_network_name_text"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/smartconfig_network_name_field"
                android:singleLine="true"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/smartconfig_network_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/smartconfig_network_name_text"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/smartconfig_network_pass_text"
                android:textColor="#333333"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/smartconfig_network_pass_eye"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@id/smartconfig_network_pass_text"
                android:layout_marginLeft="2dp"
                android:layout_toRightOf="@+id/smartconfig_network_pass_text"
                android:contentDescription="@string/smartconfig_network_pass_text"
                android:src="@drawable/eye_icon" />

            <EditText
                android:id="@+id/smartconfig_network_pass_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/smartconfig_network_pass_text"
                android:layout_alignLeft="@+id/smartconfig_network_name_field"
                android:layout_alignRight="@+id/smartconfig_network_name_field"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/smartconfig_network_pass_field"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="32"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/smartconfig_device_name_explanation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/smartconfig_network_layout"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/smartconfig_device_name_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/smartconfig_device_name_explanation"
                android:textColor="#333333"
                android:textSize="16sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/smartconfig_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/smartconfig_device_name_explanation_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:maxHeight="5dp"
            android:minHeight="5dp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/smartconfig_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/smartconfig_progressbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/smartconfig_start"
            android:textColor="#CC0000"
            android:textSize="26sp" />
    </RelativeLayout>
</LinearLayout>